[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/actors/enemy_basic.gd" id="1"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="2"]
[ext_resource type="Script" path="res://scripts/components/hitbox_component.gd" id="3"]
[ext_resource type="Resource" path="res://scripts/resources/enemy_basic_stats.tres" id="4"]

[sub_resource type="CircleShape2D" id="1"]
radius = 15.0

[sub_resource type="CircleShape2D" id="2"]
radius = 16.0

[node name="EnemyBasic" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 1
script = ExtResource("1")
enemy_stats = ExtResource("4")

[node name="BodyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="BodySprite" type="Polygon2D" parent="."]
polygon = PackedVector2Array(16, 0, 0, -16, -16, 0, 0, 16)
color = Color(1, 0.35, 0.35, 1)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0

[node name="Components" type="Node" parent="."]

[node name="HealthComponent" type="Node" parent="Components"]
script = ExtResource("2")
max_health = 35.0

[node name="HitboxComponent" type="Area2D" parent="Components"]
collision_layer = 2
collision_mask = 12
script = ExtResource("3")
health_component_path = NodePath("../HealthComponent")

owner_group = &"enemy"
inflicted_damage = 15.0

[node name="HitboxCollision" type="CollisionShape2D" parent="Components/HitboxComponent"]
shape = SubResource("2")
